# IE0417

./: .gitignore  LICENSE  README.md
laboratorios/laboratorio2/: README.md
laboratorios/laboratorio3/: README.md
laboratorios/laboratorio4/: README.md
laboratorios/laboratorio5/: README.md
laboratorios/laboratorio5/myproject/: Dockerfile  docker-compose.yml  requirements.txt
laboratorios/laboratorio5/myproject/blog/migrations/: 0001_initial.py
laboratorios/laboratorio5/myproject/blog/templates/: home.html
laboratorios/laboratorio5/myproject/myproject/: settings.py  urls.py
laboratorios/laboratorio6/: 01_CondicionDeCarrera.cpp  02_Mutex.cpp  03_Semaforo.cpp  04_VariableDeCondicion.cpp  05_Barrera.cpp  06_Deadlock.cpp  07_Ejemplo.cpp  programa
laboratorios/laboratorio7/: GNUdebugger.cpp  depuracion.cpp  memoria.cpp  sanitizer_memoria.cpp  sanitizer_threads.cpp
laboratorios/laboratorio8/: README.md  seed.cpp
laboratorios/laboratorio8/funcional/: CMakeLists.txt  authentication.h  database.h  mock_database.h  test_authentication.cpp
laboratorios/laboratorio8/unit/: CMakeLists.txt  calculator.h  test_calculator.cpp
tareas/tarea1/: README.md
